# egocentric-3d-reconstruction-demo

./: .gitignore  CITATION.cff  DATA_CARD.md  DATA_NOTICE.md  EVALUATION_CARD.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: sample.yaml
docs/: concepts.md  index.html
docs/assets/: walkthrough.webm
docs/v0.1.0/: index.html
notebooks/: 02_reconstruction_artifacts.ipynb
outputs/cam1_hand_mask_demo/: frame_quality.json  hand_mask_report.json
outputs/sample_demo/: calibration.json  colmap_commands.sh  colmap_run_report.json  colmap_run_report.md  dependency_check.json  failure_analysis.md  frame_quality.json  frames_manifest.json  nerf_3dgs_templates.sh  run_summary.json  slam_summary.json
reports/: reconstruction_readiness_report.md
scripts/: adapters.py  reconstruction_demo.py  render_reconstruction_visuals.py  run_colmap_if_available.py
tests/: test_reconstruction_demo.py
